# taiwan-property-transcript-pdf-text-ripper

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
.github/actions/setup-python-env/: action.yaml
.github/workflows/: build.yaml  lint.yaml  test.yaml
assets/: icon.icns
src/app/: bootstrap.py  config.py  container.py  lifespan.py
src/app/adapters/http/: ocr_space.py
src/app/adapters/sqlite/: ocr_result_repository.py
src/app/infrastructure/hashers/: bytes_hasher.py
src/app/infrastructure/helpers/documents/: pdf_text_ripper.py
src/app/infrastructure/media_handlers/document_handlers/: pdf_text_ripper.py
src/app/infrastructure/providers/: sqlalchemy_session_provider.py
src/app/infrastructure/schemas/general/: base.py  ocr_results.py
src/app/modules/text_ripping/application/: rip_text.py
src/app/modules/text_ripping/application/queries/: rip_text.py
src/app/modules/text_ripping/presentation/cli/: on_ripping_pdf_text.py
tests/: conftest.py
tests/integration/: test_ocr_space.py  test_sqlite.py
tests/unit/: test_bytes_hasher.py
